add js codes to call api

--- a/templates/lucky_number/index.html.twig
+++ b/templates/lucky_number/index.html.twig
@@ -9,11 +9,13 @@
 </style>
 
 <div class="example-wrapper">
+
+    <twig:Alert message="I am a success alert!" />
     <h1>Hello {{ controller_name }}! ✅</h1>
 
     This friendly message is coming from:
     <ul>
-    
+
         <li>Your controller at <code>/home/joan/my_project/src/Controller/LuckyNumberController.php</code></li>
         <li>Your template at <code>/home/joan/my_project/templates/lucky_number/index.html.twig</code></li>
         {{lucky_number}}
