--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block javascripts %}
+    <script src="{{ asset('js/user.js') }}"></script>
+{% endblock %}
+
 {% block title %}Hello UserController!{% endblock %}
 
 {% block body %}
@@ -9,12 +13,30 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Hello User ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/home/joan/my_project/src/Controller/UserController.php</code></li>
-        <li>Your template at <code>/home/joan/my_project/templates/user/index.html.twig</code></li>
-    </ul>
+    <table class="table">
+        <thead class="table-dark">
+        <tr>
+            <th scope="col"><h5>Name</h5></th>
+            <th scope="col"><h5>Email</h5></th>
+            <th scope="col"><h5>Roles</h5></th>
+            <th scope="col"><h5>Make Admin</h5></th>
+        </tr>
+        </thead>
+        <tbody>
+
+        {% for user in users %}
+            <tr >
+                <td>{{ user.name}}</td>
+                <td>{{ user.email}}</td>
+                <td>{{ user.roles|join(', ') }}</td>
+
+                <td style="cursor:pointer; color:blue" onclick="makeUserAdmin({{ user.id }})" >DONE </td>
+            </tr>
+        {% endfor %}
+
+        </tbody>
+    </table>
 </div>
 {% endblock %}
