--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,77 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+<!doctype html>
+<html lang="en">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <title>{% block title %}Welcome!{% endblock %}</title>
+
+        {% block stylesheets %}
+            <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,500,500i,600,600i&display=swap" rel="stylesheet" />
+            {{ encore_entry_link_tags('app') }}
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <header class="header">
+            <h1 class="visually-hidden">
+                Conference Guestbook
+            </h1>
+
+            <nav class="navbar navbar-expand-xl navbar-light bg-light">
+                <div class="container mt-4 mb-3">
+{#                    <a class="navbar-brand me-4 pr-2" href="{{ path('Login') }}">#}
+{#                        &#128217; Login#}
+{#                    </a>#}
+
+                    <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#header-menu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Show/Hide navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="header-menu">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item me-3">
+{#                                <a class="nav-link" href="{{ path('admin') }}">#}
+{#                                    Admin#}
+{#                                </a>#}
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+
+            <nav class="bg-light border-bottom">
+                <div class="container">
+{#                    {{ render_esi(path('conference_header')) }}#}
+                </div>
+            </nav>
+        </header>
+
+        <main role="main" class="container mt-5">
+            {% block body %}{% endblock %}
+        </main>
+
+        {% for label, messages in app.flashes %}
+            {% set bootstrapClass = label == 'error' ? 'danger' : label %}
+            {% for message in messages %}
+                <div class="alert alert-{{ bootstrapClass }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
+
+        <footer class="mt-7 px-3 py-5 text-center text-muted">
+            <p>
+
+            </p>
+            <p>
+                <a href="#" class="text-white">Back to top</a>
+            </p>
+        </footer>
+
+        {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
+        {% endblock %}
     </body>
 </html>
