--- a/templates/registration/changePass.html.twig
+++ b/templates/registration/changePass.html.twig
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html.twig' %}
 
-</body>
-</html>
+{% block body %}
+    <h1>Register</h1>
+
+    <form method="post" action="{{ path('app_register_changePassword') }}">
+
+             <label>Email:</label>
+        <label>
+            <input type="email" name="email" required>
+        </label>
+
+        <label>Password:</label>
+        <label>
+            <input type="password" name="password" required>
+        </label>
+
+        <button type="submit">Change</button>
+    </form>
+{% endblock %}
