--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,6 +4,11 @@
 <h1>Register</h1>
 
 <form method="post" action="{{ path('app_register') }}">
+
+    <label>name:</label>
+    <label>
+        <input type="text" name="name" required>
+    </label>
     <label>Email:</label>
     <label>
         <input type="email" name="email" required>
