--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <head>
         <meta charset="utf-8">
@@ -9,6 +10,7 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
 
         {% block stylesheets %}
+           <link type="text/css" href={{ asset('styles/card.css') }}/ >
             <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,500,500i,600,600i&display=swap" rel="stylesheet" />
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
