--- a/templates/product/product_list.html.twig
+++ b/templates/product/product_list.html.twig
@@ -1,94 +1,72 @@
 {% extends 'base.html.twig' %}
 
+  {% block stylesheets %}
+      <link rel="stylesheet" type="text/css" href="{{ asset('styles/card.css') }}">
+  {% endblock %}
+
 
 {% block javascripts %}
-    <script src="{{ asset('js/Product.js') }}"></script>
+    <script src="{{ asset('js/cart.js') }}"></script>
 {% endblock %}
 
 {% block title %}Products{% endblock %}
 
 {% block body %}
-    <div class="container mt-4">
 
-        <h1 class="mb-4">Product List</h1>
+    <!-- Navbar.twig -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Shop</a>
 
+        <button type="button" id="cart-button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#cartModal">
+            🛒 Cart <span id="cart-count">{{ app.session.get('cart') is defined ? app.session.get('cart')|length : 0 }}</span>
+        </button>
+    </nav>
 
-        <div class="card p-4 mb-4 shadow-sm">
-            <h2 class="h5 mb-3">Add a Product</h2>
+    <form method="get" action="{{ path('app_product_list_user') }}">
+        <input type="text" name="name" value="{{ filter }}" placeholder="Search by name...">
+        <button type="submit">Filter</button>
+    </form>
 
-            {{ form_start(form) }}
-            <div class="mb-3">
-                {{ form_label(form.name) }}
-                {{ form_widget(form.name, { 'attr': {'class': 'form-control'} }) }}
-                {{ form_errors(form.name) }}
+    <h2 class="h5">Available Products</h2>
+
+    <div class="container-fluid d-flex justify-content-center">
+        <div class="row mt-5">
+    {% for product in products %}
+
+            <div class="col-sm-4">
+                <div class="card">
+                    <img src="{{ asset('uploads/' ~ product.imgUrl) }}" class="card-img-top" width="100%">
+                    <div class="card-body pt-0 px-0">
+                        <hr class="mt-2 mx-3">
+                        <div class="d-flex flex-row justify-content-between px-3 pb-4">
+                            <div class="d-flex flex-column"><span class="text-muted">{{ product.name }}</div>
+                            <div class="d-flex flex-column">{{ product.description }}</div>
+                            <div class="d-flex flex-column">{{ product.price }}</div>
+                        </div>
+                        <div class="mx-3 mt-3 mb-2"><button onclick="addToCard({{ product.id }})" type="button" class="btn btn-success btn-block"><small>Add to Card</small></button></div>
+                    </div>
+                </div>
             </div>
+    {% endfor %}
 
-            <div class="mb-3">
-                {{ form_label(form.code) }}
-                {{ form_widget(form.code, { 'attr': {'class': 'form-control'} }) }}
-                {{ form_errors(form.code) }}
-            </div>
-            <div class="mb-3">
-                {{ form_label(form.description) }}
-                {{ form_widget(form.description, { 'attr': {'class': 'form-control'} }) }}
-                {{ form_errors(form.description) }}
-            </div>
-            <div class="mb-3">
-                {{ form_label(form.price) }}
-                {{ form_widget(form.price, { 'attr': {'class': 'form-control'} }) }}
-                {{ form_errors(form.price) }}
-            </div>
-            <div class="mb-3">
-                {{ form_label(form.imgUrl) }}
-                {{ form_widget(form.imgUrl, { 'attr': {'class': 'form-control'} }) }}
-                {{ form_errors(form.imgUrl) }}
-            </div>
-
-            <button type="submit" class="btn btn-primary">Add Product</button>
-            {{ form_end(form) }}
         </div>
-
-        <h2 class="h5">Available Products</h2>
-
-        <table class="table">
-            <thead class="table-dark">
-            <tr>
-                <th scope="col"><h5>Code</h5></th>
-                <th scope="col"><h5>Name</h5></th>
-                <th scope="col"><h5>Description</h5></th>
-                <th scope="col"><h5>Price</h5></th>
-                <th scope="col"><h5>Photo</h5></th>
-                <th scope="col"><h5>Edit</h5></th>
-                <th scope="col"><h5>Delete</h5></th>
-            </tr>
-            </thead>
-            <tbody>
-
-            {% for product in products %}
-                <tr >
-                    <td>{{ product.code}}</td>
-                    <td>{{ product.name}}</td>
-                    <td>{{ product.description}}</td>
-                    <td>{{ product.price}}</td>
-                    <td>
-                        <img src="{{ asset('uploads/' ~ product.imgUrl) }}"
-                             alt="{{ product.name }}"
-                             width="150"
-                             style="border:1px solid #ccc; padding:5px;"/>
-                    </td>
-                    <td style="cursor:pointer; color:blue"  >Edit </td>
-                    <td>         {# Delete form #}
-                        <form method="post" action="{{ path('app_product_delete', {id: product.id}) }}"
-                              onsubmit="return confirm('Are you sure you want to delete this product?');">
-                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ product.id) }}">
-                            <button class="btn btn-danger btn-sm">Delete</button>
-                        </form></td>
-{#                    <td style="cursor:pointer; color: red" onclick="deleteProduct({{ product.id }})" >DELETE</td>#}
-                </tr>
-            {% endfor %}
-
-            </tbody>
-        </table>
-
     </div>
+
+
+    <div class="modal fade" id="cartModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Your Cart</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div id="cart-modal-body" class="modal-body">
+{#                    {% include 'product/_cart_item.html.twig' with { cart: cart } %}#}
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
 {% endblock %}
