--- a/templates/user/_user_list.html.twig
+++ b/templates/user/_user_list.html.twig
@@ -1,15 +1,12 @@
-{% if cartItems is not empty %}
-    <ul class="list-group">
-        {% for item in cartItems %}
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-                {{ item.product.name }} (x{{ item.quantity }})
-                <span>{{ item.subtotal }} €</span>
-            </li>
-        {% endfor %}
-    </ul>
+{% if users is not empty %}
+        {% for user in users %}
+            <div>
+            <button onclick="addJobTaskAdmin({{ jobTaskId }}, {{ user.id }})" type="button"  id="add-admin-button" class="btn btn-outline-primary" >
+                {{ user.name }} ({{ user.email }})
+            </button>
+            </div>
+         {% endfor %}
 {% else %}
     <p class="text-muted">Your cart is empty.</p>
 {% endif %}
-<a href="{{ path('cart_checkout') }}" class="btn btn-success mt-3">
-    Checkout
-</a>
+
